# Scrambler

./: CMakeCache.txt  CMakeLists.txt  Qt Creator_Scrambler.docx  build.ninja  buttons.qrc  cmake_install.cmake  leaderboard.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  push_leaderboard.bat  qtcsettings.cmake
chris_code_for_wordle_autogen/: deps
chris_code_for_wordle_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_buttons.cpp
unfinished/: CMakeLists.txt  CMakeLists.txt.user.3976ef5  CMakeLists.txt.user.3d1c256  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
